# AIWomenSafetyBackend

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  LICENSE  QUICKSTART.md  README.md  dev.sh  docker-compose.yml  docker-start.sh  main.py  ngrok-setup.md  pyproject.toml  requirements.txt  run.sh
app/alerts/: dispatcher.py
app/api/routes/: __init__.py  alerts.py  dashboard.py  journeys.py  users.py
app/core/: database.py  exception_handler.py  security.py
app/crud/: alert.py  audit_log.py  journey.py  user.py
app/decision_engine/: engine.py
app/models/: alert.py  audit_log.py  journey.py  user.py
app/risk_engine/: analyzer.py
app/utils/: audit_logger.py
