[project]
name = "hackathon-backend"
version = "1.0.0"
description = "Backend API for PDPU Hackathon Flutter App"
authors = [
    {name = "Hackathon Team"}
]
requires-python = "==3.11.*"
dependencies = [
    "fastapi==0.100.0",
    "uvicorn[standard]==0.23.2",
    "motor==3.3.1",
    "pydantic==2.3.0",
    "pydantic-core==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
